fixed spacing in css with display contents in heading row cell

--- a/index.html/styles.css
+++ b/index.html/styles.css
@@ -1,29 +1,35 @@
 .table{
     display: grid;
-    grid-template-columns: repeat (4, 1fr);
-    gap: 10px;
+    grid-template-rows: auto auto;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
     width: 100%;
-    max width: 100%;
-    margin: auto;
+    max-width: 100%;
+    margin: auto;;
     text-align: center;
 }
-
-.row{
-    dispaly: grid;
-    grid-template-columns: repeat (4, 1fr);
+.heading-row.cell,.data-row{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     width: 100%;
 }
 
 .cell{
-    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    box-sizing: border-box;
 }
 
 .heading-row.cell{
-    font-weight: bold:
+    font-weight: bold;
+    display: contents;
 }
 
 .cell img{
     width: 100px;
     height: auto;
     border-radius: 5px;
+    object-fit: cover;
 }
